# demo_chat_app

./: .env  Cargo.toml  README.md
db/: chat
migrations/: 20230329073057_chat_app.sql
src/: data.rs  db.rs  lib.rs  main.rs  server.rs  utils.rs  ws.rs
tests/: basic_db_tests.rs
