[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chat_app"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["serde_derive" ] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.6.3", features = ["sqlite", "chrono", "runtime-tokio-native-tls"] }
anyhow = "1.0.70"
argon2 = "0.5.0"
rand = "0.8.5"
tokio-tungstenite = "0.18.0"
futures = "0.3.27"

[dev-dependencies]
reqwest = "0.11"
